# auth_service

./: .gitignore  Dockerfile  README.md  infra.yaml  pyproject.toml
api/: app.py  exceptions.py  settings.py
api/logics/: local_user.py  login_user.py  register_user.py  tokens.py  user_data.py
api/views/: auth.py  user_data.py
dao/: abstract_user_dao.py  infile_user_dao.py  json_file_datastore.py
deploy/: set.yaml
models/: user.py
src/: main.py
src/api/: app.py  exceptions.py  routes.py  settings.py
src/api/logics/: local_user.py  login_user.py  tokens.py  user_data.py
src/api/views/: auth.py  user.py  user_data.py
src/dao/: abstract_datastore.py  abstract_user_dao.py  infile_user_dao.py  json_file_datastore.py
src/models/: user.py
src/tests/: test.py  users.json
src/utils/: common.py
tests/: test.py  users.json
utils/: common.py
